style.css
/*!

Theme Name: Mairie
Description: WordPress custom Theme for Saint-Broladre's Townhall
Version: 1.0
Author: Blanche Peltier
Author URI: https://github.com/blnche

*/

@import url('assets/style/css/reset.css');
@import url('assets/style/css/variables/colors.css');
@import url('assets/style/css/variables/font-sizes.css');
@import url('assets/style/css/variables/contact-icons.css');

@import url('assets/style/css/partials/header.css');
@import url('assets/style/css/partials/footer.css');

@import url('assets/style/css/page-layouts.css');

@import url('assets/style/css/front-page.css');

/*
    =============
        MOBILE
    =============
*/

html {
    margin-top : 0 !important;

    font-size: 62.5%;
    line-height: 1.5;

    box-sizing: border-box;
}

body {
    height: 100%;
    width: 100%;

    display: flex;
    flex-direction: column;

    color: var(--clr-text-high-contrast);
    background-color: var(--clr-subtle-background);

    font-size: var(--fs-body);
}

.header, .main, .footer {
    width: 100%;
}

.main {
    margin-top: 12rem;
}

.container {
    width: 100%;
    margin-inline: auto;
}

.menu-container {
    padding: 0.25rem;

    position: fixed;
    bottom: 1rem;
    right: 1rem;

    display: flex;

    background-color: var(--clr-menu-background);

    border-radius: 0.5rem;

    z-index: 1001;
}

.menu-container li a {
    height: 32px;
    width: 32px;

    padding: 0.25rem;

    display: block;

    background-color: var(--clr-menu-background);

    border-radius: 0.5rem;
}

.menu-container li a:hover {
    background-color: var(--clr-menu-background-hover);
}

/*
    =============
    TABLET
    =============
*/

@media (min-width: 768px) and (max-width: 1023px) {
    .container {
        width: 70%;
    }
}

/*
    =============
        DESKTOP
    =============
*/

@media (min-width: 1024px) and (max-width: 1510px) {
    .main {
        margin-top: 0;
    }

    .container {
        width: 80%;
    }

    .menu-container {
        position: fixed;
        bottom: 2rem;
        right: 2rem;

        display: flex;
        justify-content: space-between;
        align-items: center;
    }
}

/*
    =============
    LARGER DESKTOP
    =============
*/

@media (min-width: 1511px) {
    body {
        background-color: var(--clr-subtle-background);
    }

    .main {
        margin-top: 0;
    }

    .container {
        width: 60%;
    }
}

